[package]
name = "Chip8Emulator"
version = "0.1.0"
authors = ["Braydn <braydnmoore@hotmai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "*"
features = ["bundled", "static-link"]

[dependencies.bitvec]
version = "0.16.1"

[dependencies]
math = "*"
rand = "*"

